brain/sources/prod-metadata/objects/Program__c/fields/Auto_Create_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Create Sessions</label>
    <type>Checkbox</type>
</CustomField>