brain/sources/prod-metadata/objects/Program__c/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <label>Lifecycle Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>