brain/sources/prod-metadata/objects/Program__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <description>Whether sessions for this program are one-on-one or group-based. Blank when Auto-Create Sessions is off.</description>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Session</fullName>
            </value>
            <value>
                <fullName>Group Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>